@@ -1,4 +1,3 @@
-using System;
 using ArC.CardGames.Components;
 using ArC.CardGames.Predefined.Common;
 using ArC.CardGames.Predefined.Vanguard;
@@ -7,12 +6,10 @@ using Godot;
 [Tool]
 public partial class HandComponent : CardLineDynamic, IEventBusUtilizer
 {
-    VanguardEventBus EventBus;
-    Hand Hand;
+    Hand Hand = null!;
 
     public void SetEventBus(VanguardEventBus eventBus)
     {
-        EventBus = eventBus;
         eventBus.CardAddedToHand += OnCardAddedToHand;
         eventBus.CardTakenFromHand += OnCardTakenFromHand;
     }
