@@ -1,7 +1,7 @@
 using System;
 using System.Collections.Generic;
-using System.Linq;
 using System.Threading.Tasks;
+using ArC.CardGames;
 using ArC.CardGames.Components;
 using ArC.CardGames.Predefined.Common;
 using ArC.CardGames.Predefined.Vanguard;
@@ -10,15 +10,11 @@ using Godot;
 
 public partial class InputProvider : Control
 {
-    DuelCreaturesBoard board;
+    DuelCreaturesBoard board = null!;
     public DuelCreaturesBoard Board => board;
+    IInputProviderStrategy strategy = null!;
 
-    #region States
-    bool DragHandToZone = false;
-    #endregion
-
-
-    SelectCardsFromHandComponent SelectCardsFromHandComponent;
+    SelectCardsFromHandComponent SelectCardsFromHandComponent = null!;
 
     public override void _Ready()
     {
@@ -28,6 +24,27 @@ public partial class InputProvider : Control
         SelectCardsFromHandComponent.CardSelected += OnCardSelected;
 
         Board.HandCardPressed += OnHandCardPressed;
+    }
+
+    public void SetEventBus(VanguardEventBus eventBus)
+    {
+        eventBus.PhaseChanged += OnPhaseChanged;
+    }
+
+    private void OnPhaseChanged(IPhase phase)
+    {
+        switch(phase)
+        {
+            case MulliganPhase:
+                SetProviderStrategy(new MulliganPhaseStrategy(SelectCardsFromHandComponent));
+                break;
+        }
+        throw new NotSupportedException($"{phase.GetType().Name} is not supported yet");
+    }
+
+    public void SetProviderStrategy(IInputProviderStrategy strategy)
+    {
+        this.strategy = strategy;
     }
 
     private void OnCardSelected(Card card)
@@ -46,69 +63,14 @@ public partial class InputProvider : Control
         VanguardCardComponent component = (VanguardCardComponent)card;
     }
 
-    public async Task<List<CardBase>> SelectCardsFromHand()
+    public Task<List<CardBase>> SelectCardsFromHand()
     {
-        DragHandToZone = true;
-        TaskCompletionSource<List<CardBase>> completionSource = new();
-        SelectCardsFromHandComponent.Activate(0, 5);
-        
-        Action<List<Card>> handler = (cards) =>
-        {
-            SelectCardsFromHandComponent.Deactivate();
-            completionSource.SetResult(cards.Select(x => x.CurrentCard).ToList());
-        };
-        SelectCardsFromHandComponent.ConfirmedCards += handler;
-        
-        var result = await completionSource.Task;
-        SelectCardsFromHandComponent.ConfirmedCards -= handler;
-        return result;
+        return strategy.SelectCardsFromHand();
     }
 
-    public async Task<CardBase> RideVanguardFromHandOrNot(VanguardCard currentVanguard)
+    public Task<CardBase?> SelectCardFromHandOrNot(VanguardCard currentVanguard)
     {
-        DragHandToZone = true;
-        Board.ShowEndPhaseButton();
-        Board.EnablePlayerVanguardDropping();
-        
-        VanguardCard newVanguard = null;
-
-        while(true)
-        {
-            TaskCompletionSource<Card?> completionSource = new();
-            Action<Card> selectionHandler = completionSource.SetResult;
-            Board.PlayerVanguard.CardDropped += selectionHandler; 
-            Action endPhaseHandler = () =>
-            {
-                completionSource.SetResult(null);
-            };
-            Board.EndPhasePressed += endPhaseHandler;
-
-            var result = await completionSource.Task;
-            Board.PlayerVanguard.CardDropped -= selectionHandler; 
-            Board.EndPhasePressed -= endPhaseHandler; 
-
-            if(result is null)
-            {
-                break;
-            }
-
-            newVanguard = (VanguardCard)result.CurrentCard;
-            var exception = VanguardValidator.ValidateRide(currentVanguard, newVanguard);
-
-            if (exception is not null)
-            {
-                result.CurrentlyDragged = false;
-                GD.PushError(exception.Message);
-            } else
-            {
-                break;
-            }
-        }
-
-        Board.DisablePlayerVanguardDropping();
-        Board.HideEndPhaseButton();
-
-        return newVanguard;
+        return strategy.SelectCardFromHandOrNot(currentVanguard);
     }
 
     public async Task<IMainPhaseAction> AskForMainPhaseAction(List<IMainPhaseAction> actions)
@@ -119,7 +81,12 @@ public partial class InputProvider : Control
             var selected = actions.FirstOf<EndMainPhase>();
             completionSource.SetResult(selected);
         };
+        Action<UnitCircleComponent, Card> onCardPlacedToRGHandler = (unitCircle, card) =>
+        {
+
+        };
         Board.EndPhasePressed +=  endPhaseHandler;
+        Board.CardDroppedToPlayerRearguard +=  onCardPlacedToRGHandler;
 
 
         var result = await completionSource.Task;
