@@ -5,8 +5,8 @@ using Godot;
 [Icon("res://Assets/Icons/Control.svg")]
 public partial class CardContainer : Control
 {
-    Card currentCard = null;
-    public Card CurrentCard => currentCard;
+    Card? currentCard = null;
+    public Card? CurrentCard => currentCard;
     protected bool UpdateSizeOnCardPlacedment = true;
     public override void _Ready()
     {
